--- a/project/homepage/fusioncommerce/cartmaster.html
+++ b/project/homepage/fusioncommerce/cartmaster.html
@@ -1,85 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<head>
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
+
 <link rel="stylesheet" href="./css/site.css">
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenville.css">
-<script src="./js/bikes.js"></script>
-<title>Parks - User Master Summary</title>
+
+<script src="./js/cart.js"></script>
+<script src="./js/products.js"></script>
+
+<title>FusionCommerce – CartMaster Summary</title>
 
 <style>
-#userGreeting
-{
-text-align: center;
-vertical-align: middle;
-color: white;
+#userGreeting {
+  text-align: center;
+  color: white;
 }
-#banner
-{
-background-color: lightgrey;
-height: 60px;
-vertical-align: middle;
-width: 100%;
+#banner {
+  background-color: lightgrey;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-#cancelBtn
-{
-width: 400px;
-}
-
-#splash
-{
-font-size: 12pt;
+.card-header {
+  background-color: #198754;
+  color: white;
+  font-weight: bold;
 }
 </style>
 </head>
-<body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
-    <!-- Navigation Bar -->
-    <div class="navbar">
-      <div class="nav-left">
-            <div class="dropdown">
-                  <button class="jsmenu"><img src="./images/greenmenu5.png"></button> 
-                  <div class="dropdown-content">
-         	<a href="index.html">Home</a>
-			<a href="login.html">Login</a>
-            <a href="logout.html">Logout</a>
-            <a href="welcome.html">Welcome</a>
-            <a href="licenses6.html">BuyNow</a>
-            <a href="reviews.html">AllReviews</a>
-            <a href="mylicenselogs.html">MyLicenseLogs</a>
-            <a href="mylicenses.html">MyLicenses</a>
-            <a href="./pricing/wizard.html">PricingWizard</a>
-            <a href="mycart.html?uid=1">MyCart</a>
-            <a href="myprofile.html">MyProfile</a>
-            <a href="testimonials.html">AdminTestimonials</a>
-            <a href="products.html">AdminProducts</a>
-            <a href="licensetypes.html">AdminLicenseTypes</a>
-	   <a href="template.html">AdminPageTemplate</a>
-             </div>
-    </div> 
-      <div class="logo">&nbsp&nbsp<H5>GEM.LM - CartMaster</H5></div>
-      </div>
-      <div class="nav-right">
-        <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
-        <span id="H3UserBanner"></span>
-        <a href="index.html" id="loginBtn" class="btn secondary-btn">Home</a>
-        <a href="userhelp.html" id="loginBtn" class="btn secondary-btn">UserHelp</a>
-        <a href="usernotices.html" id="loginBtn" class="btn secondary-btn">UserNotices</a>
-        <a href="login.html" id="loginBtn" class="btn secondary-btn" onclick="loginUser(event)">Login</a>
-        <a href="login.html" id="logoutBtn" class="btn secondary-btn" onclick="logoutUser(event)">Logout</a>
-                <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40px" height="40px"></a>
-      </div>
-    </div>
-<div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
 
-<div class="container2 my-5">
+<body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
+
+<!-- NAVIGATION BAR -->
+<div class="navbar">
+  <div class="nav-left">
+    <div class="dropdown">
+      <button class="jsmenu"><img src="./images/greenmenu5.png"></button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+        <a href="welcome.html">Welcome</a>
+        <a href="products.html">Products</a>
+        <a href="purchase555.html">Buy Now</a>
+        <a href="cartreview.html">My Carts</a>
+        <a href="myprofile.html">My Profile</a>
+      </div>
+      <div class="logo">&nbsp;&nbsp;FusionCommerce – CartMaster</div>
+    </div>
+  </div>
+
+  <div class="nav-right">
+    <img src="./images/blackcircle.png" id="profilephototarget" alt="User"
+         onclick="window.location.href='myprofile.html'" />
+    <span id="H3UserBanner"></span>
+    <a href="login.html" id="loginBtn" class="btn secondary-btn">Login</a>
+    <a href="logout.html" id="logoutBtn" class="btn secondary-btn">Logout</a>
+    <a href="cartreview.html" id="cartBtn3">
+      <img src="./images/cart4.png" width="40" height="40">
+    </a>
+  </div>
+</div>
+
+<div id="banner"><span id="userGreeting">Welcome Guest</span></div>
+
+<!-- MAIN CONTENT -->
+<div class="container my-5">
   <h1 class="mb-4">CartMaster Summary</h1>
+
   <div id="cartMasterSummary" class="mb-5"></div>
 
   <h2>Active Carts</h2>
@@ -88,65 +86,62 @@ font-size: 12pt;
 
 <script>
 async function loadCartMasters() {
-  const uid = localStorage.getItem("uid");        // your userId
-  const fullname = localStorage.getItem("fullname") || ""; // user's full name
+  const uid = localStorage.getItem("uid");
+  const fullname = localStorage.getItem("fullname") || "";
 
   if (!uid) {
     document.getElementById("cartMasterSummary").innerHTML =
-      '<div class="alert alert-danger">No uid found in localStorage</div>';
+      '<div class="alert alert-danger">No user logged in.</div>';
     return;
   }
 
   try {
-    // Fetch ALL CartMaster records (array)
-    const res = await fetch("https://api242.onrender.com/CartMaster");
+    const res = await fetch("https://api242.onrender.com/cartmaster");
     if (!res.ok) throw new Error("Failed to fetch CartMaster list");
+
     const allCartMasters = await res.json();
+    const userMaster = allCartMasters.find(cm => cm.userId == uid);
 
-    // Filter for the current userId
-    const filtered = allCartMasters.filter(cm => cm.userId == uid);
-
-    // Render summaries
     const summaryDiv = document.getElementById("cartMasterSummary");
+    const list = document.getElementById("activeCartsList");
+
     summaryDiv.innerHTML = "";
+    list.innerHTML = "";
 
-    filtered.forEach(cartMaster => {
-      // Build card header with userId + fullname
-      summaryDiv.innerHTML += `
-        <div class="card mb-4">
-          <div class="card-header">
-            CartMaster User: ${cartMaster.userId} ${fullname ? `- ${fullname}` : ""}
-          </div>
-          <div class="card-body">
-            <table class="table table-sm">
-              <tr><th>Total Carts</th><td>${cartMaster.cartsCount}</td></tr>
-              <tr><th>Active Carts</th><td>${cartMaster.cartsActive}</td></tr>
-              <tr><th>Cancelled Carts</th><td>${cartMaster.cartsCancelled}</td></tr>
-              <tr><th>Loyalty ID</th><td>${cartMaster.loyaltyid || ""}</td></tr>
-              <tr><th>Loyalty Vendor</th><td>${cartMaster.loyaltyvendor || ""}</td></tr>
-            </table>
-          </div>
-        </div>
-      `;
-
-      // Build active carts list with links
-      if (cartMaster.cartsActiveList) {
-        const cartIds = cartMaster.cartsActiveList.split(",").filter(id => !isNaN(id));
-        const list = document.getElementById("activeCartsList");
-        list.innerHTML = "";
-
-        cartIds.forEach(id => {
-          const li = document.createElement("li");
-          li.className = "list-group-item";
-          li.innerHTML = `<a href="cartdetail.html?cartid=${id}" class="text-decoration-none">Cart #${id}</a>`;
-          list.appendChild(li);
-        });
-      }
-    });
-
-    if (filtered.length === 0) {
+    if (!userMaster) {
       summaryDiv.innerHTML =
-        '<div class="alert alert-warning">No CartMaster records found for this user</div>';
+        '<div class="alert alert-warning">No CartMaster record found for this user.</div>';
+      return;
+    }
+
+    summaryDiv.innerHTML = `
+      <div class="card mb-4">
+        <div class="card-header">
+          User: ${userMaster.userId} ${fullname ? `- ${fullname}` : ""}
+        </div>
+        <div class="card-body">
+          <table class="table table-sm">
+            <tr><th>Total Carts</th><td>${userMaster.cartsCount}</td></tr>
+            <tr><th>Active Carts</th><td>${userMaster.cartsActive}</td></tr>
+            <tr><th>Cancelled Carts</th><td>${userMaster.cartsCancelled}</td></tr>
+            <tr><th>Loyalty ID</th><td>${userMaster.loyaltyid || ""}</td></tr>
+            <tr><th>Loyalty Vendor</th><td>${userMaster.loyaltyvendor || ""}</td></tr>
+          </table>
+        </div>
+      </div>
+    `;
+
+    if (userMaster.cartsActiveList) {
+      const cartIds = userMaster.cartsActiveList
+        .split(",")
+        .filter(id => id.trim() !== "");
+
+      cartIds.forEach(id => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="cartreview.html?cartId=${id}" class="text-decoration-none">Cart #${id}</a>`;
+        list.appendChild(li);
+      });
     }
 
   } catch (err) {
@@ -155,13 +150,15 @@ async function loadCartMasters() {
   }
 }
 
-// Run on page load
 loadCartMasters();
 </script>
 
+<footer class="footer">
+  &copy; Cocky Consulting 2025.<br>
+  All rights reserved.<br>
+  <a href="sitemap.html" class="sitelink">SiteMap</a>
+</footer>
 
 </body>
-   <!-- Footer -->
-  <footer class="footer"> &copy; Cocky Consulting 2025. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
-
 </html>
+
