--- a/project/homepage/fusioncommerce/cartreview.html
+++ b/project/homepage/fusioncommerce/cartreview.html
@@ -9,215 +9,179 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script> 
 <link rel="stylesheet" href="fusioncart.css" />
+
 <script src="./js/cart.js"></script>
 <script src="./js/products.js"></script>
 
+<title>Your Cart</title>
 
-  <title>Your Cart</title>
-
-  <style>
-    .highlight {
-      background-color: #e0f3ff !important;
-    }
-    .selected {
-      border: 2px solid #198754;
-    }
-    .park-logo {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
-      margin-right: 8px;
-      vertical-align: middle;
-    }
-  
-#userGreeting
-{
-  display: flex;
-  justify-content: center;     /* horizontal centering */
-  align-items: center;         /* vertical centering */
-  color: white;
-  text-align: center;
-}
-#banner
-{
-background-color: lightgrey;
-height: 60px;
-vertical-align: middle;
-width: 100%;
-display: flex;
-justify-content: center;     /* horizontal centering */
-align-items: center;         /* vertical centering */
-}
-  
-#cancelBtn
-{
-width: 400px;
-}
-
+<style>
+  .highlight { background-color: #e0f3ff !important; }
+  .selected { border: 2px solid #198754; }
+  #userGreeting {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+  }
+  #banner {
+    background-color: lightgrey;
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 </style>
-  </style>
 </head>
-  
 
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
-  <!-- ========================= -->
-  <!-- NAVIGATION BAR -->
-  <!-- ========================= -->
-  <div class="navbar">
-    <div class="nav-left">
-      <div class="dropdown">
-        <button class="jsmenu"><img src="./images/greenmenu5.png"></button>
-        <div class="dropdown-content">
-          <a href="index.html">Home</a>
-          <a href="login.html">Login</a>
-          <a href="logout.html">Logout</a>
-          <a href="welcome.html">Welcome</a>
-          <a href="products.html">Products</a>
-          <a href="mycart.html">My Cart</a>
-          <a href="myprofile.html">My Profile</a>
-          <a href="admin/products.html">Admin Products</a>
-          <a href="admin/templates.html">Admin Templates</a>
-        </div>
-        <div class="logo">&nbsp;&nbsp;FusionCommerce – Product Review</div>
+
+<!-- NAVIGATION BAR -->
+<div class="navbar">
+  <div class="nav-left">
+    <div class="dropdown">
+      <button class="jsmenu"><img src="./images/greenmenu5.png"></button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+        <a href="welcome.html">Welcome</a>
+        <a href="products.html">Products</a>
+        <a href="mycart.html">My Cart</a>
+        <a href="myprofile.html">My Profile</a>
+        <a href="admin/products.html">Admin Products</a>
+        <a href="admin/templates.html">Admin Templates</a>
       </div>
-    </div>
-
-    <div class="nav-right">
-      <img src="./images/blackcircle.png" id="profilephototarget" alt="User" onclick="window.location.href='myprofile.html'" />
-      <span id="H3UserBanner"></span>
-      <a href="login.html" id="loginBtn" class="btn secondary-btn">Login</a>
-      <a href="logout.html" id="logoutBtn" class="btn secondary-btn">Logout</a>
-      <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40" height="40"></a>
-    </div>
-  </div>
-  <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
-  <div class="container py-5">
-      <div id="cart-items" class="row g-4 mb-4"></div>
-    <div class="text-center">
-      <button id="checkout-btn" class="btn btn-primary btn-lg w-100">Checkout</button>
+      <div class="logo">&nbsp;&nbsp;FusionCommerce – Cart Review</div>
     </div>
   </div>
 
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="nav-right">
+    <img src="./images/blackcircle.png" id="profilephototarget" alt="User" onclick="window.location.href='myprofile.html'" />
+    <span id="H3UserBanner"></span>
+    <a href="login.html" id="loginBtn" class="btn secondary-btn">Login</a>
+    <a href="logout.html" id="logoutBtn" class="btn secondary-btn">Logout</a>
+    <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40" height="40"></a>
+  </div>
+</div>
 
- <script>
-  $(document).ready(function () {
-    const params = new URLSearchParams(window.location.search);
-    //const uid = params.get("uid"); //We are not passing parameters for this version. Parks5 has the original.
-    const currentParkId = 1; // We are not passing parameters for this version. params.get("parkId");
-    const selectedCartIds = [];
-    uid = localStorage.getItem("uid");
+<div id="banner"><span id="userGreeting">Welcome Guest</span></div>
 
-    if (!uid) {
-      $("#cart-items").html(`<div class="alert alert-danger">Missing UID in URL.</div>`);
+<div class="container py-5">
+  <div id="cart-items" class="row g-4 mb-4"></div>
+
+  <div class="text-center">
+    <button id="checkout-btn" class="btn btn-primary btn-lg w-100">Checkout</button>
+  </div>
+</div>
+
+<script>
+$(document).ready(function () {
+  const uid = localStorage.getItem("uid");
+  const selectedCartIds = [];
+
+  if (!uid) {
+    $("#cart-items").html(`<div class="alert alert-danger">No user logged in.</div>`);
+    return;
+  }
+
+  // Load carts from FusionCommerce API
+  $.get("https://api242.onrender.com/cart", function (carts) {
+    const userCarts = carts.filter(c => c.uid == uid && c.isCheckedOut != 1 && c.isCheckedOut != 2);
+
+    if (userCarts.length === 0) {
+      $("#cart-items").html(`<div class="alert alert-info">No active carts for user ${uid}.</div>`);
       return;
     }
 
-    $.get("https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Parks", function (parks) {
-      const parkMap = {};
-      parks.forEach(p => parkMap[p.parkId] = p);
+    userCarts.forEach(cart => {
+      const card = `
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm" id="cart-${cart.cartId}">
+            <div class="card-body d-flex flex-column">
+              <p><strong>Cart ID:</strong> ${cart.cartId}</p>
+              <p><strong>Description:</strong> ${cart.itemDescription}</p>
+              <p><strong>Total Items:</strong> ${cart.totalcartitems}</p>
+              <p><strong>Total Price:</strong> $${cart.transactiontotal}</p>
+              <p><strong>Date Added:</strong> ${cart.dateAdded}</p>
+              <p><strong>Checked Out:</strong> ${cart.isCheckedOut ? "Yes" : "No"}</p>
 
-      $.get("https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Cart", function (cart) {
-        const userItems = cart.filter(item => item.uid === uid && item.isCheckedOut !== 1 && item.isCheckedOut !== 2);
-        if (userItems.length === 0) {
-          $("#cart-items").html(`<div class="alert alert-info">No Transactions Pending for UID ${uid}.</div>`);
-          return;
-        }
+              <button class="btn btn-outline-success mt-auto w-100 select-btn" data-cartid="${cart.cartId}">
+                Select for Payment
+              </button>
 
-        userItems.forEach(function (item) {
-          const isCurrent = currentParkId && item.parkId.toString() === currentParkId;
-          const park = parkMap[item.parkId];
-          const parkName = park ? park.name : `Park #${item.parkId}`;
-          const parkLogo = park && park.parklogourl ? `<img src="${park.parklogourl}" alt="Logo" class="park-logo" onerror="this.style.display='none';">` : "";
-          const parkAddress = park ? park.address : "Address not available";
-          const cardId = `cart-${item.cartId}`;
-
-          const card = `
-            <div class="col-md-6 col-lg-4">
-              <div class="card h-100 shadow-sm ${isCurrent ? 'highlight' : ''}" id="${cardId}">
-                <div class="card-body d-flex flex-column">
-                  <p class="card-text"><strong>Park:</strong><br><span class="d-flex justify-content-center align-items-center mb-3">${parkLogo}</span><span class="d-flex justify-content-center align-items-center mb-3">${parkName}</span></p>
-                  <p class="card-text"><strong>Address:</strong> ${parkAddress}</p>
-                  <p class="card-title"><strong>CartId:</strong> ${item.cartId}</p>
-                  <p class="card-title"><strong>PassTypes:</strong> ${item.itemType}</p>
-                  <p class="card-text"><strong>Description:</strong> ${item.itemDescription}</p>
-                  <p class="card-text"><strong>TotalCartItems:</strong> ${item.totalcartitems}</p>
-                  <p class="card-text"><strong>Total Price:</strong> $${item.transactiontotal}</p>
-                  <p class="card-text"><strong>Date Added:</strong> ${item.dateAdded}</p>
-                  <p class="card-text"><strong>Checked Out:</strong> ${item.isCheckedOut ? "Yes" : "No"}</p>
-                  <button class="btn btn-outline-success mt-auto w-100 select-btn" data-cartid="${item.cartId}">Select for Payment</button>
-                  <button class="btn btn-outline-danger mt-2 w-100 cancel-btn" data-cartid="${item.cartId}">Remove from Cart</button>
-                </div>
-              </div>
+              <button class="btn btn-outline-danger mt-2 w-100 cancel-btn" data-cartid="${cart.cartId}">
+                Cancel Cart
+              </button>
             </div>
-          `;
-          $("#cart-items").append(card);
-        });
-
-        $(document).on("click", ".select-btn", function () {
-          const cartId = $(this).data("cartid").toString();
-          const card = $(`#cart-${cartId}`);
-
-          if (selectedCartIds.includes(cartId)) {
-            selectedCartIds.splice(selectedCartIds.indexOf(cartId), 1);
-            card.removeClass("selected");
-            $(this).text("Select for Payment");
-          } else {
-            selectedCartIds.push(cartId);
-            card.addClass("selected");
-            $(this).text("Selected");
-          }
-        });
-
-        $("#checkout-btn").on("click", function () {
-          if (selectedCartIds.length === 0) {
-            alert("Please select at least one item to proceed to payment.");
-            return;
-          }
-
-          const query = selectedCartIds.map(id => `cartId=${encodeURIComponent(id)}`).join("&");
-          window.location.href = `payments8.html?${query}`;
-        });
-      }).fail(function (xhr, status, error) {
-        console.error("❌ Error loading cart:", status, error);
-        $("#cart-items").html(`<div class="alert alert-danger">Error loading cart: ${error}</div>`);
-      });
-    }).fail(function (xhr, status, error) {
-      console.error("❌ Error loading parks:", status, error);
-      $("#cart-items").html(`<div class="alert alert-danger">Error loading park names: ${error}</div>`);
+          </div>
+        </div>
+      `;
+      $("#cart-items").append(card);
     });
-  });
 
-  function checkpll() {
-    const someuid = localStorage.getItem('uid');
-    if (someuid === '901') {
-      window.location.href = 'loginerror.html';
-    }
-  }
+    // Select cart for payment
+    $(document).on("click", ".select-btn", function () {
+      const cartId = $(this).data("cartid").toString();
+      const card = $(`#cart-${cartId}`);
 
-  $(document).on("click", ".cancel-btn", function () {
-    const cartId = $(this).data("cartid");
-
-    if (!confirm("Are you sure you want to remove this item from your cart?")) return;
-
-    $.ajax({
-      url: `https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Cart/${cartId}`,
-      type: "PUT",
-      contentType: "application/json",
-      data: JSON.stringify({ isCheckedOut: 2 }),
-      success: function () {
-        $(`#cart-${cartId}`).fadeOut(500, function () {
-          $(this).remove();
-        });
-      },
-      error: function (xhr, status, error) {
-        console.error("❌ Error cancelling item:", status, error);
-        alert("Failed to remove item. Please try again.");
+      if (selectedCartIds.includes(cartId)) {
+        selectedCartIds.splice(selectedCartIds.indexOf(cartId), 1);
+        card.removeClass("selected");
+        $(this).text("Select for Payment");
+      } else {
+        selectedCartIds.push(cartId);
+        card.addClass("selected");
+        $(this).text("Selected");
       }
     });
+
+    // Checkout selected carts
+    $("#checkout-btn").on("click", function () {
+      if (selectedCartIds.length === 0) {
+        alert("Please select at least one cart.");
+        return;
+      }
+
+      const query = selectedCartIds.map(id => `cartId=${encodeURIComponent(id)}`).join("&");
+      window.location.href = `payments8.html?${query}`;
+    });
+
+    // Cancel cart
+    $(document).on("click", ".cancel-btn", function () {
+      const cartId = $(this).data("cartid");
+
+      if (!confirm("Are you sure you want to cancel this cart?")) return;
+
+      $.ajax({
+        url: `https://api242.onrender.com/cart/${cartId}`,
+        type: "PUT",
+        contentType: "application/json",
+        data: JSON.stringify({ isCheckedOut: 2 }),
+        success: function () {
+          $(`#cart-${cartId}`).fadeOut(500, function () {
+            $(this).remove();
+          });
+        },
+        error: function (xhr, status, error) {
+          alert("Failed to cancel cart.");
+        }
+      });
+    });
+
   });
+});
 </script>
+
 </body>
-<footer class="footer"> &copy; Cocky Consulting 2025. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
+
+<footer class="footer">
+  &copy; Cocky Consulting 2025.<br>
+  All rights reserved.<br>
+  <a href="sitemap.html" class="sitelink">SiteMap</a>
+</footer>
+
 </html>
+
