--- a/project/homepage/fusioncommerce/payments8.html
+++ b/project/homepage/fusioncommerce/payments8.html
@@ -7,14 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script type="module" src="https://esm.run/@material/web/all.js"></script>
-  <link rel="stylesheet" href="./css/site.css">
-  <link rel="stylesheet" href="./css/layout.css">
-  <link rel="stylesheet" href="./css/greenville.css">
-<script src="./js/bikes.js"></script>
    <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+   <!-- jQuery -->
+   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+ 
+  <link rel="stylesheet" href="./css/fusioncart.css" />
+  <!-- Your new JS files -->
+  <script src="./js/products.js"></script>
+  <script src="./js/cart.js"></script>
+
   <style>
     .table-striped tbody tr:nth-of-type(odd) {
       background-color: #f9f9f9;
