--- a/project/homepage/fusioncommerce/paynow2.html
+++ b/project/homepage/fusioncommerce/paynow2.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
-  <link rel="stylesheet" href="./css/dropmenu.css">
-  <link rel="stylesheet" href="./css/site.css">
-  <link rel="stylesheet" href="./css/layout.css">
-  <link rel="stylesheet" href="./css/greenville.css">
-  <script src="./js/bikes.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+     <link rel="stylesheet" href="./css/fusioncart.css" />
+     <!-- Your new JS files -->
+     <script src="./js/products.js"></script>
+     <script src="./js/cart.js"></script>
   <style>
     .table-striped tbody tr:nth-of-type(odd) {
       background-color: #f9f9f9;
