--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -9,8 +9,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">    
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/button/text-button.js"></script>
-<link rel="stylesheet" href="./css/fusioncart.css">  
+<link rel="stylesheet" href="./css/login.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/site.css"> 
 <link rel="stylesheet" href="./css/greenville.css"> 
+<link rel="stylesheet" href="./css/fusioncart.css">  
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
