--- a/project/homepage/fusioncommerce/payments8.html
+++ b/project/homepage/fusioncommerce/payments8.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FusionCommerce – Payment Summary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FusionCommerce – Payment Summary</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script type="module" src="https://esm.run/@material/web/all.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
