--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -12,8 +12,9 @@
 <link rel="stylesheet" href="./css/login.css"> 
 <link rel="stylesheet" href="./css/layout.css"> 
 <link rel="stylesheet" href="./css/site.css"> 
-<link rel="stylesheet" href="./css/greenville.css"> 
 <link rel="stylesheet" href="./css/fusioncart.css">  
+<link rel="stylesheet" href="./css/greenville.css"> 
+<link rel="stylesheet" href="./css/greenvillemiddle.css"> 
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -27,17 +28,21 @@
       <div class="dropdown">
         <button class="jsmenu"><img src="./images/greenmenu5.png"></button> 
         <div class="dropdown-content">
+            <a href="index.html">Home</a>
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
             <a href="licenses6.html">BuyNow</a>
-            <a href="products.html">AdminProducts</a>
-            <a href="licensetypes.html">LicenseTypes</a>
-            <a href="mylicenselogs.html">LicenseLogs</a>
-            <a href="mylicenses.html">MyLicenses</a>
-            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="help.html">Help</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
+            <a href="template.html">AdminPageTemplate</a>
         </div>
     </div>
     </div>
