--- a/project/homepage/fusioncommerce/paynow2.html
+++ b/project/homepage/fusioncommerce/paynow2.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FusionCommerce – Complete Payment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FusionCommerce – PayNow2</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script type="module" src="https://esm.run/@material/web/all.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <link rel="stylesheet" href="./css/fusioncart.css" />
+  <!-- Your new JS files -->
+  <script src="./js/products.js"></script>
+  <script src="./js/cart.js"></script>
 
   <style>
     .table-striped tbody tr:nth-of-type(odd) {
@@ -44,7 +47,6 @@
       <div class="logo">&nbsp&nbsp;<h5>FusionCommerce – Complete Payment</h5></div>
     </div>
     <div class="nav-right">
-      <img src="./images/blackcircle.png" id="profilephototarget" alt="User" onclick="window.location.href='myprofile.html'" />
       <span id="H3UserBanner"></span>
       <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
         <md-text-button class="icon-only" href="index.html" aria-label="Home" title="Home">
