--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -94,8 +94,7 @@
 </head>
 
 <body>
-<div class="container2">
- div class="container2" style="border: solid 2px darkgreen;">
+<div class="container2" style="border: solid 2px darkgreen;">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
