--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -242,7 +242,7 @@ font-size: 10pt;
 <!-- ========================= -->
 <!--     MIDDLE CONTENT        -->
 <!-- ========================= -->
-<section class="main-content" style="vertical-align: center; margin: 0 auto; postion: relative; min-height: 900px; max-height: 3000px; width: 95%;">
+<section class="main-content" style="vertical-align: center; margin: 0 auto;">
 
 <!-- FIRST FEATURES SECTION -->
 	<div id="features" class="features">
@@ -696,6 +696,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
