--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -89,7 +89,17 @@
 .card-body { width: 100%; height: 600px;} 
 .tab-content { width: 100%; } 
 .tab-pane { width: 100%; height: 700px; }
-    
+ .top-section {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    padding-left: 0;
+    padding-right: 0;
+}
+   
 </style>
 </head>
 
