--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -148,7 +148,7 @@ css
 
 </head>
 <body>
-<div class="container2" style="border: solid 2px darkgreen;">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
