--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
             <h6>Legacy Annimation Sequence</h6>
         </div>
     </div>
+		<div class="task-item">
+            <h4>Assignment12</h4>
+            <a href="https://jssg33.github.io/usc242/statusreports/DESIGNDOCUMENT3.0.pdf"><img src="./images/templateviewtop.png" alt="Assignment12"></a>
+            <h5>Amended DesignSpecs</h5>
+            <h6>Design Document3.0</h6>
+        </div>
+    </div>
 </section>
 
 <section class="projectdetails">
