--- a/project/part5/licensing/licensing.html
+++ b/project/part5/licensing/licensing.html
@@ -19,7 +19,41 @@ a li
 {
 font-size: 10pt;
 }
+  .feature-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 20px;
+    padding: 20px;
+  }
+
+  .feature-cards .card {
+    background: linear-gradient(135deg, #d9f7d9, #b6eeb6);
+    border: 1px solid #8ed88e;
+    border-radius: 12px;
+    padding: 24px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
+
+  .feature-cards .card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 6px 14px rgba(0,0,0,0.12);
+  }
+
+  .feature-cards h3 {
+    margin-top: 0;
+    color: #1b5e20;
+    font-size: 1.25rem;
+  }
+
+  .feature-cards p {
+    margin: 8px 0 0;
+    color: #2e7d32;
+    font-size: 1rem;
+  }
 </style>
+   
+
 </head>
 
 <body>
@@ -156,19 +190,23 @@ font-size: 10pt;
 </section>
 
 
-<!-- EMPHASIS BLOCK -->
-<section class="emphasis">
-  <div class="emphasis-inner">
+<section class="feature-cards">
+  <div class="card">
     <h3>Secure & Compliant</h3>
     <p>Enterprise‑grade security with SOC 2 Type II certification</p>
+  </div>
 
+  <div class="card">
     <h3>Expert Support</h3>
     <p>Dedicated support team available 24/7 for enterprise customers</p>
+  </div>
 
+  <div class="card">
     <h3>Instant Activation</h3>
     <p>Get started immediately with instant license activation</p>
   </div>
 </section>
+   
 
 <!-- MIDDLE COLUMNS -->
 <section class="middle-columns" style="background-color: lightgrey;">
